# email-code-fetcher

./: LICENSE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: fetcher.ts  index.tsx  notifications.ts  settings.ts  signals.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: info.rs
src-tauri/src/gmail/: auth.rs  info.rs  message.rs  mod.rs
src/components/: Button.tsx  Category.tsx  Checkbox.tsx  Container.tsx  Radio.tsx
src/features/: AccountManager.tsx  AuthenticationModal.tsx  CodeList.tsx  ConnectionModal.tsx  ConnectionSetting.tsx  DarkModeSetting.tsx  NotificationTime.tsx  StartupSetting.tsx  UpdateInterval.tsx
src/features/settings/: ConnectionSetting.tsx  DarkModeSetting.tsx  ThemePickerSetting.tsx
src/pages/: App.tsx  Notifiy.tsx  Onboarding.tsx
